@@ -1,3 +1,2 @@
 --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
 --enable-native-access=ALL-UNNAMED
--XX:+UseCompactObjectHeaders
